// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog snapshots > css mode snapshot 1`] = `
"import React, { useEffect, useId, createContext, useContext } from 'react';
import { FocusTrap } from 'focus-trap-react';
import styles from './Dialog.module.css';
export type DialogVariant = 'default' | 'confirm';
export type DialogSize    = 'sm' | 'md' | 'lg';

export interface DialogProps {
  isOpen:    boolean;
  onClose:   () => void;
  title?:    string;
  children:  React.ReactNode;
  variant?:  DialogVariant;
  size?:     DialogSize;
  footer?:   React.ReactNode;
}

interface DialogContextValue {
  isOpen: boolean;
  onClose: () => void;
  size: DialogSize;
  titleId: string;
}

const DialogContext = createContext<DialogContextValue | undefined>(undefined);

const useDialogContext = () => {
  const context = useContext(DialogContext);
  if (!context) throw new Error('Dialog sub-components must be used within Dialog');
  return context;
};

export const DialogRoot = ({
  isOpen,
  onClose,
  children,
  size = 'md',
}: {
  isOpen: boolean;
  onClose: () => void;
  children: React.ReactNode;
  size?: DialogSize;
}) => {
  const titleId = useId();

  useEffect(() => {
    if (isOpen) {
      document.body.style.overflow = 'hidden';
    } else {
      document.body.style.overflow = '';
    }
    return () => {
      document.body.style.overflow = '';
    };
  }, [isOpen]);

  useEffect(() => {
    const handleEscape = (e: KeyboardEvent) => {
      if (e.key === 'Escape') onClose();
    };
    if (isOpen) {
      window.addEventListener('keydown', handleEscape);
    }
    return () => {
      window.removeEventListener('keydown', handleEscape);
    };
  }, [isOpen, onClose]);

  if (!isOpen) return null;

  return (
    <DialogContext.Provider value={{ isOpen, onClose, size, titleId }}>
      <FocusTrap>
        {children as React.ReactElement}
      </FocusTrap>
    </DialogContext.Provider>
  );
};

export const DialogOverlay = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { onClose } = useDialogContext();
  return (
    <div className={[styles.overlay, className].filter(Boolean).join(' ')} onClick={onClose}>
      {children}
    </div>
  );
};

export const DialogContent = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { size, titleId } = useDialogContext();
  return (
    <div
      className={[styles.Dialog, styles[\`Dialog--\${size}\`], className].filter(Boolean).join(' ')}
      role="dialog"
      aria-modal="true"
      aria-labelledby={titleId}
      onClick={(e) => e.stopPropagation()}
    >
      {children}
    </div>
  );
};

export const DialogHeader = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <header className={[styles.header, className].filter(Boolean).join(' ')}>
    {children}
  </header>
);

export const DialogTitle = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { titleId } = useDialogContext();
  return <h2 id={titleId} className={[styles.title, className].filter(Boolean).join(' ')}>{children}</h2>;
};

export const DialogClose = ({ className }: { className?: string }) => {
  const { onClose } = useDialogContext();
  return (
    <button
      className={[styles['close-button'], className].filter(Boolean).join(' ')}
      onClick={onClose}
      aria-label="Close Dialog"
    >
      &times;
    </button>
  );
};

export const DialogBody = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.body, className].filter(Boolean).join(' ')}>
    {children}
  </div>
);

export const DialogFooter = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <footer className={[styles.footer, className].filter(Boolean).join(' ')}>
    {children}
  </footer>
);

export const Dialog = Object.assign(DialogRoot, {
  Root: DialogRoot,
  Overlay: DialogOverlay,
  Content: DialogContent,
  Header: DialogHeader,
  Title: DialogTitle,
  Close: DialogClose,
  Body: DialogBody,
  Footer: DialogFooter,
});

Dialog.displayName = 'Dialog';
DialogRoot.displayName = 'Dialog.Root';
DialogOverlay.displayName = 'Dialog.Overlay';
DialogContent.displayName = 'Dialog.Content';
DialogHeader.displayName = 'Dialog.Header';
DialogTitle.displayName = 'Dialog.Title';
DialogClose.displayName = 'Dialog.Close';
DialogBody.displayName = 'Dialog.Body';
DialogFooter.displayName = 'Dialog.Footer';
"
`;

exports[`Dialog snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.dialog-overlay, .overlay {
  --dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-padding: calc(var(--spacing-unit) * 6);

  position:        fixed;
  top:             0;
  left:            0;
  right:           0;
  bottom:          0;
  background-color: var(--dialog-overlay-bg);
  display:         flex;
  align-items:     center;
  justify-content: center;
  z-index:         1000;
  padding:         var(--Dialog-padding);
}

.Dialog {
  --Dialog-radius: var(--radius-lg);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);

  background:      var(--color-surface);
  border-radius:   var(--Dialog-radius);
  box-shadow:      var(--Dialog-shadow);
  max-height:      calc(100vh - (var(--spacing-unit) * 10));
  display:         flex;
  flex-direction:  column;
  width:           100%;
  animation:       DialogIn 0.3s ease-out;
}

@keyframes DialogIn {
  from { opacity: 0; transform: scale(0.95) translateY(10px); }
  to   { opacity: 1; transform: scale(1) translateY(0); }
}

.dialog-header, .header {
  padding:        var(--Dialog-padding);
  border-bottom:  1px solid var(--color-border);
  display:        flex;
  align-items:    center;
  justify-content: space-between;
}

.dialog-title, .title {
  margin:      0;
  font-size:   1.25rem;
  font-weight: 600;
  color:       var(--color-text);
  font-family: var(--font-family);
}

.dialog-close, .close-button {
  background:    transparent;
  border:        none;
  font-size:     1.5rem;
  line-height:   1;
  color:         var(--color-text-muted);
  cursor:        pointer;
  padding:       calc(var(--spacing-unit) * 2);
  border-radius: var(--radius-sm);
  transition:    background 0.15s ease;
}

.dialog-close:hover, .close-button:hover {
  background: var(--color-background);
  color:      var(--color-text);
}

.dialog-body, .body {
  padding:     var(--Dialog-padding);
  overflow-y:  auto;
  font-family: var(--font-family);
  color:       var(--color-text);
  line-height: 1.5;
}

.dialog-footer, .footer {
  padding:       var(--Dialog-padding);
  border-top:    1px solid var(--color-border);
  display:       flex;
  justify-content: flex-end;
  gap:           calc(var(--spacing-unit) * 3);
}

/* Sizes */
.Dialog--sm { max-width: 400px; }
.Dialog--md { max-width: 600px; }
.Dialog--lg { max-width: 800px; }
"
`;

exports[`Dialog snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Dialog } from './Dialog';

const meta: Meta<typeof Dialog> = {
  title: 'Crucible/Dialog',
  component: Dialog,
  parameters: { layout: 'centered' },
import { Button } from '../Button/Button';

  argTypes: {
    variant:  { control: 'select', options: ['default', 'confirm'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Dialog>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Dialog Title</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>This is the Dialog body content.</p>
              </Dialog.Body>
              <Dialog.Footer>
                <div style={{ display: 'flex', gap: '8px', justifyContent: 'flex-end' }}>
                  <button onClick={() => setIsOpen(false)}>Cancel</button>
                  <button onClick={() => setIsOpen(false)}>Confirm</button>
                </div>
              </Dialog.Footer>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};

export const Confirm: Story = {
  args: { variant: 'confirm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Confirm Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Confirm Variant</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with confirm variant.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Sm Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Sm Size</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with sm size.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Md Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Md Size</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with md size.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Lg Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Lg Size</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with lg size.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};
"
`;

exports[`Dialog snapshots > tailwind mode snapshot 1`] = `
"import React, { useEffect, useId, createContext, useContext } from 'react';
import { FocusTrap } from 'focus-trap-react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)]',
  confirm: 'bg-[var(--color-surface)] border-t-4 border-[var(--color-primary)]',
 };

const sizeClasses: Record<string, string> = {
  sm: 'max-w-md',
  md: 'max-w-lg',
  lg: 'max-w-2xl',
};

export type DialogVariant = 'default' | 'confirm';
export type DialogSize    = 'sm' | 'md' | 'lg';

interface DialogContextValue {
  isOpen: boolean;
  onClose: () => void;
  titleId: string;
  variant: DialogVariant;
  size: DialogSize;
}

const DialogContext = createContext<DialogContextValue | undefined>(undefined);

const useDialogContext = () => {
  const context = useContext(DialogContext);
  if (!context) throw new Error('Dialog components must be wrapped in <Dialog />');
  return context;
};

export interface DialogProps {
  isOpen:   boolean;
  onClose:  () => void;
  variant?: DialogVariant;
  size?:    DialogSize;
  children: React.ReactNode;
}

const DialogRoot: React.FC<DialogProps> = ({
  isOpen,
  onClose,
  variant = 'default',
  size = 'md',
  children,
}) => {
  const titleId = useId();

  useEffect(() => {
    if (isOpen) {
      document.body.style.overflow = 'hidden';
    } else {
      document.body.style.overflow = '';
    }
    return () => {
      document.body.style.overflow = '';
    };
  }, [isOpen]);

  useEffect(() => {
    const handleEscape = (e: KeyboardEvent) => {
      if (e.key === 'Escape') onClose();
    };
    if (isOpen) {
      window.addEventListener('keydown', handleEscape);
    }
    return () => {
      window.removeEventListener('keydown', handleEscape);
    };
  }, [isOpen, onClose]);

  if (!isOpen) return null;

  return (
    <DialogContext.Provider value={{ isOpen, onClose, titleId, variant, size }}>
      {children}
    </DialogContext.Provider>
  );
};

const DialogOverlay: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { onClose } = useDialogContext();
  return (
    <div 
      className={["fixed inset-0 z-50 flex items-center justify-center p-4 bg-[var(--dialog-overlay-bg)] backdrop-blur-sm", className].filter(Boolean).join(' ')}
      onClick={onClose}
    >
      {children}
    </div>
  );
};

const DialogContent: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { titleId, variant, size } = useDialogContext();
  return (
    <FocusTrap>
      <div
        className={[
          'w-full bg-[var(--color-surface)] rounded-[var(--radius-lg)] shadow-2xl overflow-hidden',
          variantClasses[variant],
          sizeClasses[size],
          className
        ].filter(Boolean).join(' ')}
        role="dialog"
        aria-modal="true"
        aria-labelledby={titleId}
        onClick={(e) => e.stopPropagation()}
      >
        {children}
      </div>
    </FocusTrap>
  );
};

const DialogHeader: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => (
  <header className={["flex items-center justify-between p-6 border-b border-[var(--color-border)]", className].filter(Boolean).join(' ')}>
    {children}
  </header>
);

const DialogTitle: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { titleId } = useDialogContext();
  return <h2 id={titleId} className={["text-xl font-bold text-[var(--color-text)]", className].filter(Boolean).join(' ')}>{children}</h2>;
};

const DialogClose: React.FC<{ className?: string }> = ({ className }) => {
  const { onClose } = useDialogContext();
  return (
    <button
      className={["text-[var(--color-text-muted)] hover:text-[var(--color-text)] transition-colors text-2xl", className].filter(Boolean).join(' ')}
      onClick={onClose}
      aria-label="Close Dialog"
    >
      &times;
    </button>
  );
};

const DialogBody: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => (
  <div className={["p-6 text-[var(--color-text-muted)]", className].filter(Boolean).join(' ')}>
    {children}
  </div>
);

const DialogFooter: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => (
  <footer className={["p-6 border-t border-[var(--color-border)] bg-[var(--color-background)]/50", className].filter(Boolean).join(' ')}>
    {children}
  </footer>
);

export const Dialog = Object.assign(DialogRoot, {
  Root: DialogRoot,
  Overlay: DialogOverlay,
  Content: DialogContent,
  Header: DialogHeader,
  Title: DialogTitle,
  Close: DialogClose,
  Body: DialogBody,
  Footer: DialogFooter,
});

Dialog.displayName = 'Dialog';
DialogRoot.displayName = 'Dialog.Root';
DialogOverlay.displayName = 'Dialog.Overlay';
DialogContent.displayName = 'Dialog.Content';
DialogHeader.displayName = 'Dialog.Header';
DialogTitle.displayName = 'Dialog.Title';
DialogClose.displayName = 'Dialog.Close';
DialogBody.displayName = 'Dialog.Body';
DialogFooter.displayName = 'Dialog.Footer';
"
`;

exports[`Dialog snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Dialog } from './Dialog';

const meta: Meta<typeof Dialog> = {
  title: 'Crucible/Dialog',
  component: Dialog,
  parameters: { layout: 'centered' },
import { Button } from '../Button/Button';

  argTypes: {
    variant:  { control: 'select', options: ['default', 'confirm'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Dialog>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Dialog Title</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>This is the Dialog body content.</p>
              </Dialog.Body>
              <Dialog.Footer>
                <div style={{ display: 'flex', gap: '8px', justifyContent: 'flex-end' }}>
                  <button onClick={() => setIsOpen(false)}>Cancel</button>
                  <button onClick={() => setIsOpen(false)}>Confirm</button>
                </div>
              </Dialog.Footer>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};

export const Confirm: Story = {
  args: { variant: 'confirm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Confirm Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Confirm Variant</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with confirm variant.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Sm Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Sm Size</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with sm size.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Md Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Md Size</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with md size.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => {
    const [isOpen, setIsOpen] = useState(false);
    return (
      <div style={{ height: '300px', display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
        <button onClick={() => setIsOpen(true)}>Open Lg Dialog</button>
        <Dialog {...args} isOpen={isOpen} onClose={() => setIsOpen(false)}>
          <Dialog.Overlay>
            <Dialog.Content>
              <Dialog.Header>
                <Dialog.Title>Lg Size</Dialog.Title>
                <Dialog.Close />
              </Dialog.Header>
              <Dialog.Body>
                <p>Dialog content with lg size.</p>
              </Dialog.Body>
            </Dialog.Content>
          </Dialog.Overlay>
        </Dialog>
      </div>
    );
  },
};
"
`;
